--- a/FutureGroup/Application/Home/View/Index/index.html
+++ b/FutureGroup/Application/Home/View/Index/index.html
@@ -48,7 +48,7 @@
 				<span class="menu"> <img src="__PUBLIC__/images/icon.png" alt=""/></span>
 				<ul class="res">
 					<li><a class="active" href="__URL__/index">首页</a></li>
-					<li><a href="__URL__/about">1111111111111111111111关于</a></li>
+					<li><a href="__URL__/about">关于</a></li>
 					<li><a href="__URL__/service">服务</a></li>
 					<li><a href="__URL__/solution">方案</a></li>
 					<li><a href="__URL__/Project">项目</a></li>
