修改顶部导栏

--- a/FutureGroup/Application/Home/View/Index/solution.html
+++ b/FutureGroup/Application/Home/View/Index/solution.html
@@ -48,9 +48,8 @@
 				<ul class="res">
 					<li><a href="__URL__/index">首页</a></li>
 					<li><a href="__URL__/about">关于</a></li>
-					<li><a href="__URL__/service">服务</a></li>
-					<li><a class="solu active" href="__URL__/solution">方案</a></li>
-					<li><a href="__URL__/Project">项目</a></li>
+					<li><a href="__URL__/service">展示</a></li>
+					<li><a href="__URL__/Project">动态</a></li>
 					<li><a href="__URL__/contact">联系</a></li>
 				</ul>
 				 <script>
