--- a/FutureGroup/Application/Home/View/Index/service.html
+++ b/FutureGroup/Application/Home/View/Index/service.html
@@ -49,9 +49,8 @@
 				<ul class="res">
 					<li><a href="index">首页</a></li>
 					<li><a href="about">关于</a></li>
-					<li><a class="ser active" href="service">服务</a></li>
-					<li><a href="__URL__/solution">方案</a></li>
-					<li><a href="__URL__/Project">项目</a></li>
+					<li><a class="ser active" href="service">展示</a></li>
+					<li><a href="__URL__/Project">动态</a></li>
 					<li><a href="__URL__/contact">联系</a></li>
 				</ul>
 				 <script>
