--- a/FutureGroup/Application/Home/View/Index/contact.html
+++ b/FutureGroup/Application/Home/View/Index/contact.html
@@ -49,7 +49,7 @@
 					<li><a href="__URL__/index">首页</a></li>
 					<li><a href="__URL__/about">关于</a></li>
 					<li><a href="__URL__/service">展示</a></li>
-					<li><a href="__URL__/solution">动态</a></li>
+					<li><a href="__URL__/project">动态</a></li>
 					<li><a class="cont active" href="__URL__/contact">联系</a></li>
 				</ul>
 				 <script>
