彻底修复导航栏

--- a/FutureGroup/Application/Home/View/Index/contact.html
+++ b/FutureGroup/Application/Home/View/Index/contact.html
@@ -48,8 +48,8 @@
 				<ul class="res"> 
 					<li><a href="__URL__/index">首页</a></li>
 					<li><a href="__URL__/about">关于</a></li>
-					<li><a href="__URL__/service">展示</a></li>
-					<li><a href="__URL__/project">动态</a></li>
+					<li><a href="__URL__/introduce">展示</a></li>
+					<li><a href="__URL__/news">动态</a></li>
 					<li><a class="cont active" href="__URL__/contact">联系</a></li>
 				</ul>
 				 <script>
@@ -71,7 +71,7 @@
 		<div class="contact-main">
 			<div class="contact-top">
 				<h3>联系我们</h3>
-				<p>如果您对于我们的作品感兴趣，想加入我们，或者对于我们的不足有什么意见或好的建议欢迎致电说明，或者通过邮箱留言，感谢您的关注！</p>
+				<p style="font-size:22px">如果您对于我们的作品感兴趣，想加入我们，或者对于我们的不足有什么意见或好的建议欢迎致电说明，或者通过邮箱留言，感谢您的关注！</p>
 			</div>
 			<div class="col-md-12 contact-right footer-grid wow bounceIn" data-wow-delay="0.4s" style="margin-left:60px">
 				<h3>Feed Back</h3>
