--- a/FutureGroup/Application/Home/View/Index/news.html
+++ b/FutureGroup/Application/Home/View/Index/news.html
@@ -49,8 +49,8 @@
 				<ul class="res">
 					<li><a href="__URL__/index">首页</a></li>
 					<li><a href="__URL__/about">关于</a></li>
-					<li><a href="__URL__/service">展示</a></li>
-					<li><a class="ser active" href="__URL__/Project">动态</a></li>
+					<li><a href="__URL__/introduce">展示</a></li>
+					<li><a class="ser active" href="__URL__/news">动态</a></li>
 					<li><a href="__URL__/contact">联系</a></li>
 				</ul>
 				 <script>
